# aoc-2024-solutions

./: README.md  flake.nix  result
haskell-solutions/: .envrc  CHANGELOG.md  LICENSE  haskell-solutions.cabal
ocaml_solutions/: .envrc  dune-project
rust-solutions/: .envrc
rust-solutions/.direnv/: flake-profile-9fde7933655a2dccf81d3acdfc52fb41d7d8ba0b  flake-profile-9fde7933655a2dccf81d3acdfc52fb41d7d8ba0b.rc
rust-solutions/.direnv/flake-inputs/: fp4zyn603hxvlbnprfh9gi2m9jskrk4g-source  gvmg1sgjgbr151nnvf4cn5mj0b8mpyaq-source  rpp10b0m4g7vfm6wbsf2rk0005yhpf3i-source  zdr7lxn91vlgbjxq3nlkkgy87wpbvwk9-source  zgivwi79m2m2cj5z00w49xn6xm296bq6-source
